bin/testsuite/tests/compiler/src/errors/compiler5336.swg
#global testerror "Err0017"
#test
{
    let a = 0
    a = 1
}
